--- a/app/src/main/res/layout/activity_viewplan.xml
+++ b/app/src/main/res/layout/activity_viewplan.xml
@@ -45,22 +45,11 @@
         android:layout_width="422dp"
         android:layout_height="578dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="7dp"
 
-        tools:layout_editor_absoluteY="0dp" />
+        />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="426dp"
-        android:layout_marginBottom="257dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/recyclerView"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
