--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -55,7 +55,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/delete_btn"
+        android:id="@+id/Delete"
         android:layout_width="158dp"
         android:layout_height="52dp"
         android:layout_marginStart="54dp"
@@ -68,5 +68,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.116"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="182dp"
+        android:layout_height="269dp"
+        app:srcCompat="@drawable/delete"
+        tools:layout_editor_absoluteX="238dp"
+        tools:layout_editor_absoluteY="-23dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
