--- a/app/src/main/res/layout/activity_foods.xml
+++ b/app/src/main/res/layout/activity_foods.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="20dip"
         android:layout_marginEnd="150dp"
         android:background="@drawable/rounded_corner"
-        android:text="World Best Foods"
+        android:text="@string/world_best_foods"
         android:textColor="@android:color/white"
         android:textSize="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,19 +45,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         app:srcCompat="@drawable/icon9" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="375dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="21dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
