--- a/app/src/main/res/layout/activity_foods.xml
+++ b/app/src/main/res/layout/activity_foods.xml
@@ -46,5 +46,13 @@
         app:layout_constraintVertical_bias="0.65"
         app:srcCompat="@drawable/icon9" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="47dp"
+        tools:layout_editor_absoluteY="696dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
