--- a/app/src/main/res/layout/activity_viewplan.xml
+++ b/app/src/main/res/layout/activity_viewplan.xml
@@ -44,11 +44,11 @@
         android:id="@+id/recyclerView"
         android:layout_width="422dp"
         android:layout_height="578dp"
+        android:layout_marginTop="7dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="7dp"
 
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
